2001-11-05  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in (handle_single_transform_list): Pass $nonansi_obj to
	derive_suffix.  Don't use an hardcoded 'o' for object extensions.
	(derive_suffix): Accept $OBJ as a second argument, don't
	hardcode 'o'.
	* tests/suffix5.test: New test.
	* tests/Makefile.am (TESTS): Add suffix5.test.
	Reported by Arkadiusz Miskiewicz <misiek@pld.ORG.PL>.

2001-11-05  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in (handle_single_transform_list): Don't call
	$lang->target_hook for undefinied langages.
	* tests/suffix4.test: New test.
	* tests/Makefile.am (TESTS): Add suffix4.test.
	Reported by Dmitry Mikhin <dmitrym@acres.com.au>.

2001-11-05  Akim Demaille  <akim@epita.fr>

	* automake.in (@common_sometimes, &handle_configure): No longer
	use stamp-hin.
	* lib/am/remake-hdr.am: Adjust.
	* tests/confh.test: There is no stamp.hin.

2001-11-01  Akim Demaille  <akim@epita.fr>

	* lib/am/lex.am, lib/am/yacc.am: Use the output file name in
	`#line' and multiple inclusion guards.
	* lib/ylwrap: Remove debugging code.
	(input_dir, input_rx): Move where used.
	Use the output file name in `#line'.

2001-10-31  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in (transform): Update documentation.

2001-10-31  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* m4/gcj.m4 (AM_PROG_GCJ): Define GCJFLAGS if unset.
	Reported by Olivier Louchart-Fletcher <olivier@zipworld.com.au>.

2001-10-30  Akim Demaille  <akim@epita.fr>

	* automake.in (&create): Reinstall.

2001-10-30  Akim Demaille  <akim@epita.fr>

	* automake.in (&append_exeext): Use macro_delete.

2001-10-30  Akim Demaille  <akim@epita.fr>

	* automake.in ($verbose): Remove, inherited from
	Automake::General.
	(&variable_delete): Rename as...
	(&macro_delete): this, for consistency.
	(&variable_assert): New.
	(&variable_value_as_list, &variable_value_as_list_recursive_worker):
	Use it.

2001-10-29  Akim Demaille  <akim@epita.fr>
