@@ -1,5 +1,15 @@
 2001-11-05  Alexandre Duret-Lutz  <duret_g@epita.fr>
 
+	* automake.in (libtool_files, libtool_sometimes, common_files,
+	common_sometimes, config_aux_path): Use qw to simplify definition.
+	(scan_texinfo_file) <clean_suffixes, predefined_index,
+	hidden_index>: Likewise.
+	(scan_autoconf_traces) <traced>: Likewise.
+	(scan_one_autoconf_file, check_gnu_standards, resolve_linker):
+	Likewise.
+
+2001-11-05  Alexandre Duret-Lutz  <duret_g@epita.fr>
+
 	* automake.in (handle_single_transform_list): Pass $nonansi_obj to
 	derive_suffix.  Don't use an hardcoded 'o' for object extensions.
 	(derive_suffix): Accept $OBJ as a second argument, don't
